Refactor: More widget stuff and fixing of files.
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/layout/bottomsheetdialog_color_settings.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_color_settings.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            style="@style/TextDefaultStyle"/>
+            style="@style/TextDefaultStyle" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/bottom_color_date_view"
@@ -56,10 +56,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                style="@style/TextDefaultStyle" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -94,7 +93,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                style="@style/TextDefaultStyle" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -130,7 +129,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                style="@style/TextDefaultStyle" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -166,7 +165,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                style="@style/TextDefaultStyle" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -202,7 +201,79 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                style="@style/TextDefaultStyle" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/bottom_color_widget_background_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_widget_background_title"
+                style="@style/TextDefaultStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@android:color/transparent"
+                android:gravity="left|center"
+                android:inputType="number"
+                android:text="@string/appearance_bottom_dialog_desc_widget_background"
+                android:textSize="@dimen/text_large"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_widget_background_color"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@android:color/transparent"
+                android:textSize="@dimen/text_large"
+                android:gravity="left|center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:ignore="RtlHardcoded"
+                style="@style/TextDefaultStyle" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/bottom_color_widget_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_widget_text_title"
+                style="@style/TextDefaultStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@android:color/transparent"
+                android:gravity="left|center"
+                android:inputType="number"
+                android:text="@string/appearance_bottom_dialog_desc_widget_text"
+                android:textSize="@dimen/text_large"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_widget_text_color"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@android:color/transparent"
+                android:textSize="@dimen/text_large"
+                android:gravity="left|center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:ignore="RtlHardcoded"
+                style="@style/TextDefaultStyle" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
