--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,8 +11,7 @@
 
     <FrameLayout
         android:id="@+id/touchArea"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
