--- a/app/src/main/res/layout/fragment_widgets.xml
+++ b/app/src/main/res/layout/fragment_widgets.xml
@@ -85,6 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_marginEnd="18dp"
                     android:layout_weight="0.3"
                     android:contentDescription="@string/widget_weather_description" />
 
