--- a/app/src/main/res/layout/fragment_widgets.xml
+++ b/app/src/main/res/layout/fragment_widgets.xml
@@ -32,6 +32,7 @@
         tools:ignore="SpeakableTextPresentCheck">
 
         <LinearLayout
+            android:id="@+id/linearLayoutContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="50dp"
@@ -226,6 +227,16 @@
                         android:lines="1"
                         android:paddingTop="2dp"
                         android:text="@string/widgets_battery_voltage"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/battery_current"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:lines="1"
+                        android:paddingTop="2dp"
+                        android:text="@string/widgets_battery_current"
                         android:textSize="14sp" />
 
                     <TextView
