--- a/app/src/main/res/values/nontranslatable.xml
+++ b/app/src/main/res/values/nontranslatable.xml
@@ -22,4 +22,6 @@
     <string name="widget_weather_wind" translatable="false">Wind : %1$.2f %2$s</string>
     <string name="widget_weather_humidity" translatable="false">Humidity : %d %%</string>
     <string name="widget_weather_pressure" translatable="false">Pressure : %d hPa</string>
+
+    <string name="acra_email" translatable="false">droidworksstudio@063240.xyz</string>
 </resources>
